Minor fixes of the inspections